Updated images directory path

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="hero-section">
-        <img src="./Images/Isfahan-main.jpg" alt="Torshov Overview" class="hero-image">
+        <img src="Isfahan-main.jpg" alt="Torshov Overview" class="hero-image">
         <div class="hero-text" >
             <h1 class="heading-text">Visit Isfahan </h1>
             <p class="heading-text">Enjoy culture and historical building in this vibrant district close to the center of Isfahan.</p>
@@ -21,21 +21,21 @@
         <div class="activities-grid">
             <div class="activity">
                 <a href="https://www.iraniantours.com/attraction/sheikh-lotfollah-mosque/">
-                <img src="./Images/Isfahan-left.jpg" alt="Sheikh Lotfollah Mosque" class="img-hover">
+                <img src="Isfahan-left.jpg" alt="Sheikh Lotfollah Mosque" class="img-hover">
                 </a>
                 <h3>Sheikh Lotfollah Mosque</h3>
                 <p>Sheikh Lotfollah Mosque in Isfahan is a Safavid-era architectural gem, renowned for its intricate tile work and unique, intimate design without minarets or a courtyard.</p>
             </div>
             <div class="activity">
                 <a href="https://www.tripadvisor.co.uk/Attraction_Review-g295423-d324078-Reviews-Khaju_Bridge-Isfahan_Isfahan_Province.html">
-                <img src="./Images/Khaju-Bridge.jpg" alt="Khaju Bridge in Isfahan" class="img-hover">
+                <img src="Khaju-Bridge.jpg" alt="Khaju Bridge in Isfahan" class="img-hover">
                 </a>
                 <h3>Khaju Bridge in Isfahan</h3>
                 <p>Khaju Bridge in Isfahan is a stunning Safavid-era architectural masterpiece, blending functionality with beauty.</p>
             </div>
             <div class="activity">
                 <a href="https://itto.org/iran/itemgallery/Naghsh-e-Jahan-Square/">
-                <img src="./Images/Isfahan-right.jpeg" alt="Meydan-e Naghshe Jahan" class="img-hover">
+                <img src="Isfahan-right.jpeg" alt="Meydan-e Naghshe Jahan" class="img-hover">
                 </a>
                 <h3>Meydan-e Naghshe Jahan</h3>
                 <p>Meydan-e Naghshe Jahan in Isfahan is a monumental square, renowned for its breathtaking Safavid architecture and historical significance.</p>
@@ -44,7 +44,7 @@
     </section>
 
     <section class="guide">
-        <img src="./Images/Manchester-Smart-Clothes.jpg" alt="Guide photo">
+        <img src="Manchester-Smart-Clothes.jpg" alt="Guide photo">
         <div class="guide-text">
             <p>“I have lived at Isfahan for over 20 years, so I can show you all of its best parts and hidden secrets.”</p>
             <p class="guide-name">Hatef Eidi</p>
